--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -26,14 +26,14 @@ jobs:
       run: |
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
-        git pull origin master
+        git pull origin main
         git add ./vmess_iran.txt
         git add ./trojan_iran.txt
         git add ./vmless_iran.txt
         git add ./ss_iran.txt
-        git checkout master
+        git checkout main
         git commit -m "✔️ $(date '+%Y-%m-%d %H:%M:%S') Collected"
     - name: Push Changes
       uses: ad-m/github-push-action@master
       with:
-        branch: master
+        branch: main
