--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -29,7 +29,7 @@ jobs:
         git pull origin main
         git add ./vmess_iran.txt
         git add ./trojan_iran.txt
-        git add ./vmless_iran.txt
+        git add ./vless_iran.txt
         git add ./ss_iran.txt
         git checkout main
         git commit -m "✔️ $(date '+%Y-%m-%d %H:%M:%S') Collected"
