--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
+    - uses: actions/setup-go@v4
       with:
-        go-version: 1.23
+        go-version: '>=1.23'
+    - run: go version
 
     - name: Build and run Golang file
       run: |
