--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -15,7 +15,7 @@ jobs:
 
     - uses: actions/setup-go@v4
       with:
-        go-version: '>=go1.21.3'
+        go-version: '>=1.21.3'
     - run: go version
 
     - name: Build and run Golang file
