--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -28,11 +28,7 @@ jobs:
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
         git pull origin main
-        git add ./vmess_iran.txt
-        git add ./trojan_iran.txt
-        git add ./vless_iran.txt
-        git add ./ss_iran.txt
-        git add ./mixed_iran.txt
+        git add ./result/*
         git checkout main
         git commit -m "✔️ $(date '+%Y-%m-%d %H:%M:%S') Collected"
     - name: Push Changes
