更新 Collector.yml，添加日志级别控制参数；更新 channels.csv，确保频道链接完整性；重构 helpers.go，添加文件追加功能并优化文件写入锁机制；修改 main.go，动态设置 worker 数量并完善 mixed.txt 文件处理逻辑

--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and run Golang file
         run: |
           go build -o myapp
-          ./myapp -sort
+          ./myapp -sort -log warn
 
       - name: Commit Changes
         run: |
