更新工作流中的 Speedtest 步骤，添加错误处理选项；清空 ConfigsNames 配置

--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -35,7 +35,7 @@ jobs:
       
       - name: Speedtest
         run: |
-          ./tool/speedTest_singtools/singtools test   -i ./results/mixed.txt -o ./results/mixed_tested.json
+          ./tool/speedTest_singtools/singtools test   -i ./results/mixed.txt -o ./results/mixed_tested.json -e fatal
 
       - name: Commit Changes
         run: |
