--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -35,7 +35,7 @@ jobs:
       
       - name: Speedtest
         run: |
-          ./tool/speedTest_singtools/singtools test   -i ./results/mixed.txt -o ./results/mixed_tested.json -e fatal
+          ./tool/speedTest_singtools/singtools test   -i ./results/mixed.txt -o ./results/mixed_tested.json -e fatal -f ""
 
       - name: Commit Changes
         run: |
