在工作流中添加 Subconverter 启动步骤，并调整 curl 命令的 IP 地址

--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -37,10 +37,17 @@ jobs:
         run: |
           ./tool/speedTest_singtools/singtools test   -i ./results/mixed.txt -o ./results/mixed_tested.json -e fatal -f ""
       
+      - name: Start Subconverter
+        run: |
+          ./tool/subconverter/subconverter 
+        
+      - name: Sleep
+        run: |
+          sleep 5
+      
       - name: Convert to mixed with base64encode
         run: |
-          ./tool/subconverter/subconverter & 
-          curl -o ./results/mixed_tested.txt http://127.0.0.1:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json
+          curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json
 
       - name: Commit Changes
         run: |
