在工作流中将 Subconverter 启动步骤修改为后台运行

--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -39,7 +39,7 @@ jobs:
       
       - name: Start Subconverter
         run: |
-          ./tool/subconverter/subconverter 
+          ./tool/subconverter/subconverter &
         
       - name: Sleep
         run: |
