--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -40,17 +40,23 @@ jobs:
       - name: Convert to mixed with base64encode
         run: |
           ./tool/subconverter/subconverter &
+          
           until curl -s http://0.0.0.0:25500 >/dev/null; do
             sleep 1
           done
 
-          if [ -f "./results/mixed_tested.json" ]; then
-            cat ./results/mixed_tested.json
-          else
-            echo "mixed_tested.json does not exist."
-          fi
+          # curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json
 
-          curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json
+          # 执行 curl 命令并将结果保存到文件，同时添加错误检查
+          if ! curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json; then
+            echo "curl 请求失败，退出步骤"
+            exit 1
+          fi
+          # 检查文件是否成功下载
+          if [ ! -f "./results/mixed_tested.txt" ]; then
+            echo "下载的文件未找到，退出步骤"
+            exit 1
+          fi
 
       - name: Commit Changes
         run: |
