在工作流中添加对 mixed_tested.json 文件的查找步骤，以增强调试信息

--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -47,7 +47,9 @@ jobs:
 
           # curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json
 
-          whereis mixed_tested.json
+          echo "\n------------------"
+          find / -name mixed_tested.json
+          echo "\n------------------"
 
           # 执行 curl 命令并将结果保存到文件，同时添加错误检查
           if ! curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json; then
