--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -48,11 +48,12 @@ jobs:
           # curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json
 
           echo "\n------------------"
-          find / -name mixed_tested.json
+          # find / -name mixed_tested.json
+          echo $GITHUB_WORKSPACE
           echo "\n------------------"
 
           # 执行 curl 命令并将结果保存到文件，同时添加错误检查
-          if ! curl -o ./results/mixed_tested.txt http://0.0.0.0:25500/sub\?target\=mixed\&url\=./results/mixed_tested.json; then
+          if ! curl -o ./results/mixed_tested.txt "http://0.0.0.0:25500/sub\?target\=mixed\&url\= $GITHUB_WORKSPACE/results/mixed_tested.json"; then
             echo "curl 请求失败，退出步骤"
             exit 1
           fi
